<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RoboHead</string>
    
    <string name="main_title">- RoboHead -</string>

 
    <string name="menu_test_control_label">Тест управления</string>
    <string name="menu_test_animation_label">Тест анимации</string>
    
    
    <string name="button_run_label">Запуск</string>
    <string name="button_settings_label">Настройки</string>
    <string name="dialog_settings_title">Настройки приложения</string>
    <string name="button_about_label">О приложении</string>
    <string name="dialog_about_title">О приложении RoboHead</string>
    <string name="dialog_about_text">Приложение <b>RoboHead</b> это мозг робота. Головной, естественно. Спинной мозг расположен в Arduino. А ещё есть голоса. Голоса в мозг приходят по каналу WiFi.</string>
    
    
    <string name="option_mycheckbox_title">Моя опция-галочка</string>
    <string name="option_mycheckbox_summary">Здесь будет описание опции-галочки</string>
    
    <string name="option_udp_receive_port_key">option_receive_port</string>
    <string name="option_udp_receive_port_default_value">51974</string>
    <string name="option_udp_receive_port_title">Порт приёма</string>
    <string name="option_udp_receive_port_summary">Порт для приёма команд и сообщений от управляющего устройства</string>
    
    <string name="option_udp_send_port_key">option_send_port</string>
    <string name="option_udp_send_port_default_value">51973</string>
    <string name="option_udp_send_port_title">Порт передачи</string>
    <string name="option_udp_send_port_summary">Порт для передачи сообщений управляющему устройству</string>
    
    <string name="option_udp_sendtype_broadcast_key">option_broadcast</string>
    <string name="option_udp_sendtype_broadcast_title">Широковещательная передача</string>
    <string name="option_udp_sendtype_broadcast_summary">Широковещательная передача сообщений на удалённый узел управления роботом</string>
    <string name="option_udp_sendtype_broadcast_default_value">true</string>
    
    <string name="option_udp_sendtype_broadcast_local_key">option_broadcast_local</string>
	<string name="option_udp_sendtype_broadcast_local_title">В пределах ЛВС</string>
	<string name="option_udp_sendtype_broadcast_local_summary">Некоторые роутеры мобильных устройств могут отправлять широковещательные UDP-пакеты только в пределах локальной вычислительной сети</string>
    <string name="option_udp_sendtype_broadcast_local_default_value">true</string>
	
    <string name="option_udp_sendtype_p2p_key">option_p2p</string>
	<string name="option_udp_sendtype_p2p_title">Точка-точка</string>
    <string name="option_udp_sendtype_p2p_summary">Передача сообщений на удалённый узел управления роботом</string>
    <string name="option_udp_sendtype_p2p_default_value">false</string>
    
    <string name="option_udp_recipient_ip_key">option_recipient_ip</string>
    <string name="option_udp_recipient_ip_title">IP-адрес получателя</string>
    <string name="option_udp_recipient_ip_summary">IP-адрес удалённого узла управления роботом</string>
    <string name="option_udp_recipient_ip_default_value">xxx.xxx.xxx.xxx</string>
        
    <string name="option_robobody_mac_key">option_robobody_mac</string>
    <string name="option_robobody_mac_default_value">00:00:00:00:00:00</string>
    <string name="option_robobody_mac_title">MAC-адрес робота</string>
    <string name="option_robobody_mac_summary">MAC-адрес Bluetooth-адаптера контроллера робота</string>
    
    
    
    
    
</resources>