<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <PreferenceCategory 
        android:title="@string/preference_receive_wifi">
            
		<EditTextPreference
	        android:key="@string/option_udp_receive_port_key"
	        android:title="@string/option_udp_receive_port_title"
	        android:summary="@string/option_udp_receive_port_summary"
	        android:defaultValue="@string/option_udp_receive_port_default_value"
			android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" />		
	</PreferenceCategory>


    <PreferenceCategory 
        android:title="@string/preference_send_wifi">
    
	    <EditTextPreference
	        android:key="@string/option_udp_send_port_key"
	        android:title="@string/option_udp_send_port_title"
	        android:summary="@string/option_udp_send_port_summary"
	        android:defaultValue="@string/option_udp_send_port_default_value"
			android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" />
    
		<CheckBoxPreference
            android:key="@string/option_udp_sendtype_broadcast_key"
            android:title="@string/option_udp_sendtype_broadcast_title"
            android:summary="@string/option_udp_sendtype_broadcast_summary"
            android:defaultValue="@string/option_udp_sendtype_broadcast_default_value"
			android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" />
				
			<CheckBoxPreference
	            android:key="@string/option_udp_sendtype_broadcast_local_key"
				android:dependency="@string/option_udp_sendtype_broadcast_key"
	            android:title="@string/option_udp_sendtype_broadcast_local_title"
	            android:summary="@string/option_udp_sendtype_broadcast_local_summary"
	            android:defaultValue="@string/option_udp_sendtype_broadcast_local_default_value"
				android:layout_width="wrap_content"
	    		android:layout_height="wrap_content" />
			
		<CheckBoxPreference
            android:key="@string/option_udp_sendtype_p2p_key"
            android:title="@string/option_udp_sendtype_p2p_title"
            android:summary="@string/option_udp_sendtype_p2p_summary"
            android:defaultValue="@string/option_udp_sendtype_p2p_default_value"
			android:layout_width="wrap_content"
	    	android:layout_height="wrap_content" />
					
			<EditTextPreference
			    android:key="@string/option_udp_recipient_ip_key"
			    android:dependency="@string/option_udp_sendtype_p2p_key"
		        android:title="@string/option_udp_recipient_ip_title"
		        android:summary="@string/option_udp_recipient_ip_summary"
		        android:defaultValue="@string/option_udp_recipient_ip_default_value"
				android:layout_width="wrap_content"
		    	android:layout_height="wrap_content" />
	</PreferenceCategory>

    
    <PreferenceCategory 
        android:title="@string/preference_bluetooth">
    
	    <EditTextPreference
	        android:key="@string/option_robobody_mac_key"
	        android:title="@string/option_robobody_mac_title"
	        android:summary="@string/option_robobody_mac_summary"
	        android:defaultValue="@string/option_robobody_mac_default_value"
			android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
		/>
    </PreferenceCategory>

</PreferenceScreen>
